[package]
name = "mlir"
version = "0.0.1"
edition = "2021"
description =  "MLIR library for sino programmming language"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[features]
default = ["llvm-18"]
llvm-18 = []
llvm-17 = []
llvm-16 = []
llvm-15 = []