[package]
name = "mlir"
version = "0.0.1"
edition = "2021"
description =  "MLIR library for sino programmming language"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69.4"

[features]
default = ["llvm-18","apt"]
llvm-18 = []
llvm-17 = []
llvm-16 = []
llvm-15 = []
apt = []
brew = []